add_subdirectory (Application)
add_subdirectory (Attributes)
add_subdirectory (Audio)
add_subdirectory (Base)
add_subdirectory (Decorations)
add_subdirectory (File)
add_subdirectory (Font)
add_subdirectory (Image)
add_subdirectory (Layout)
add_subdirectory (NavigationViews)
add_subdirectory (Math)
add_subdirectory (Renderers)
add_subdirectory (SimpleWidgets)
add_subdirectory (Stream)
add_subdirectory (String)
add_subdirectory (Text)
add_subdirectory (Threading)
add_subdirectory (Time)
add_subdirectory (TreeViews)
add_subdirectory (UITools)
add_subdirectory (Utils)
add_subdirectory (WidgetTree)
add_subdirectory (Window)
