INCLUDE(FindOpenGL)
INCLUDE(FindGLUT)


add_subdirectory (RSS)
add_subdirectory (Buttons)
add_subdirectory (Checkerboard)
add_subdirectory (ColorSelector)
add_subdirectory (ComboBox)
add_subdirectory (CoverFlow)
add_subdirectory (Knobs)
add_subdirectory (FileSelector)
add_subdirectory (List)
add_subdirectory (Grids)
add_subdirectory (TabView)

