add_subdirectory (AudioDecoder)
add_subdirectory (RSS)
add_subdirectory (Buttons)
add_subdirectory (Checkerboard)
add_subdirectory (ColorSelector)
#add_subdirectory (Commands)
add_subdirectory (ComboBox)
add_subdirectory (CoverFlow)
add_subdirectory (CSSFontSelection)
add_subdirectory (DirectHTML)
#add_subdirectory (DragnDrop)
add_subdirectory (FlowLayout)
add_subdirectory (FontBrowser)
add_subdirectory (Grids)
add_subdirectory (HTMLTree)
add_subdirectory (HTMLView)
add_subdirectory (JSTest)
add_subdirectory (Knobs)
add_subdirectory (FileSelector)
add_subdirectory (List)
add_subdirectory (LayoutAnimation)
add_subdirectory (MainMenu)
add_subdirectory (MessageQueue)
add_subdirectory (Particles)
#add_subdirectory (RSS)
add_subdirectory (SimpleLayout)
add_subdirectory (SimpleTouch)
add_subdirectory (TabView)
add_subdirectory (TextEdit)
#add_subdirectory (VideoDecoder)
#add_subdirectory (VSTPlugin)
add_subdirectory (WidgetCreatorCSS)

