noinst_PROGRAMS = nuitest

nuitest_SOURCES = \
	nuiApp.cpp \
	nuiApp.h \
	nuiWin.cpp \
	nuiWin.h \
	nuiGearWin.cpp \
	nuiGearWin.h \
	Gears.cpp \
	Gears.h

nuitest_LDADD = $(top_builddir)/src/libnui.la

EXTRA_DIST = \
	nuiTest.dsp \
	nuiTest.dsw \
	nuiTest.mcp \
	nuiTest.sln \
	nuiTest.vcproj \
	nuiTest2003.sln \
	nuiTest2003.vcproj \
	spline.xml \
	test.xml

MAINTAINERCLEANFILES = Makefile.in
